[package]
name = "vk_yolox"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
half = "2.7"
image = { version = "0.24.9", features = ["png", "jpeg"] }
naga = { version = "27", features = ["spv-out", "wgsl-in"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vulkano = "0.35.2"
